blocks/card.css
.card {
  display:flex;
  flex-direction: column;
  list-style: none;
  border-radius: 10px;
  max-width: 282px;
  overflow: hidden;
}

.card__text {
  font-weight: 900;
  font-size: 24px;
  max-width: 193px;
  line-height: 29.05px;
  padding-left: 0;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  font-family: Inter, Arial, Helvetica, sans-serif;
}

.card__image {
  width: 282px;
  height: 282px;
}

.card__image:hover {
  cursor: pointer;
}

.card__description {
  display: flex;
  background-color: #fff;
  color: #000;
  padding-top: 25px;
  padding-bottom: 25px;
  padding-left: 20px;
  padding-right: 20px;
  align-items: center;
  justify-content: space-between;
  font-size: 24px;
}

.card__like {
  background: transparent url(../images/heart_inactive.svg) center no-repeat;
  width: 21px;
  height: 18px;
 border: none;
}



.card__like_active {
  background-image: url(../images/heart_active.svg) 
  ;
}
.card__like:hover {
  opacity: 0.5;
  cursor: pointer;
}


.card {
  position: relative; 
}

.card__delete {
  position: absolute;
  top: 10px;
  right: 10px;
  width: 18px;
  height: 19px;
  background-image: url('data:image/svg+xml;base64,...'); /* Your trash icon */
  background: none;
  border: none;
  cursor: pointer;
 z-index: 2;
ease-in-out;
  transition: opacity 0.3s;

}

 
.card__delete::before {
  content: '🗑️'; 
  font-size: 16px;
  line-height: 1;
  opacity: 0.7;
}

